# hermes-voice

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: deploy.sh
src/hermes_voice/api/: README.md  __init__.py  dependencies.py  main.py  websocket_handler.py
src/hermes_voice/api/static/: app.js  index.html
src/hermes_voice/application/: README.md  __init__.py  use_cases.py
src/hermes_voice/domain/: README.md  __init__.py  entities.py  ports.py
src/hermes_voice/infrastructure/: README.md  __init__.py  async_task_dispatcher.py  cartesia_tts.py  deepgram_stt.py  hermes_context_provider.py  hermes_gateway_adapter.py  hermes_gateway_llm.py  keyword_intent_classifier.py  llm_intent_classifier.py  memory_repo.py  openrouter_llm.py  websocket_notifier.py
tests/integration/: test_e2e_pipeline.py
tests/integration/infrastructure/: test_adapters.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_entities.py
